--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "lint:report": "eslint --output-file eslint_report.json --format json .",
-    "build": "npx rimraf dist && tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./dist",
+    "build:frontend": "cd client && npm run build",
+    "build": "rimraf dist && tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./dist && npm run build:frontend",
     "start": "node ./dist/index.js",
-    "dev": "nodemon -r tsconfig-paths/register src/index.ts"
+    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
+    "dev:once": "ts-node -r tsconfig-paths/register src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,8 @@
   ],
   "devDependencies": {
     "@modii/tscpaths": "0.2.2",
+    "@types/color": "3.0.3",
+    "@types/express": "4.17.13",
     "@types/klaw": "3.0.3",
     "@typescript-eslint/eslint-plugin": "5.8.1",
     "@typescript-eslint/parser": "5.8.1",
@@ -52,8 +56,10 @@
     ]
   },
   "dependencies": {
+    "color": "4.2.1",
     "dotenv": "16.0.0",
     "enmap": "5.8.8",
+    "express": "4.17.3",
     "mineflayer": "4.1.0",
     "nanoid": "3.3.1",
     "socket.io": "4.4.1"
