--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-alert": "7.0.3",
     "react-bootstrap": "2.2.0",
     "react-dom": "^17.0.2",
+    "react-markdown": "8.0.1",
     "react-router-dom": "6.2.2",
     "socket.io-client": "4.4.1",
     "typescript": "^4.4.2"
